# causeway

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .release-please-manifest.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  commitlint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
benchmarks/: README.md
docs/: README.md  architecture.md  design.md  getting-started.md  ir-stability.md  plugins.md  reference.md  routing.md  semver.md  tasks.md  (+2 more)
examples/blog/: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json  quay.toml
examples/blog/app/: app.py  config.py  db.py  deps.py  lifespan.py  notifications.py  plugins.py  tasks.py
examples/blog/app/routes/: _middleware.py  _scope.py  index.py
examples/blog/app/routes/admin/: _scope.py  stats.py
examples/blog/app/routes/admin/posts/: [id].py  index.py
examples/blog/app/routes/posts/: _scope.py  index.py
examples/blog/app/routes/posts/$id/: comments.py  index.py
examples/blog/app/routes/posts/[id]/: comments.py  index.py
examples/blog/tests/: test_blog.py
examples/minimal-crud/: README.md  app.py  causeway.toml  pyproject.toml
examples/minimal-crud/app/: app.py  store.py
examples/minimal-crud/app/routes/users/: $id.py  [id].py  index.py
examples/minimal-crud/routes/users/: [id].py  index.py
examples/minimal-crud/tests/: test_users.py
(+220 files in other folders)
