[project]
name = "quay-example-blog"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
  "quay>=0.1.0a0",
  "sqlalchemy[asyncio]>=2.0.36",
  "aiosqlite>=0.20.0",
]

[tool.uv.sources]
quay = { path = "../../packages/quay", editable = true }

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
